--- a/OznerLibraryDemo/DeviceTableViewCell.xib
+++ b/OznerLibraryDemo/DeviceTableViewCell.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -16,13 +15,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView tag="100" contentMode="redraw" ambiguous="YES" misplaced="YES" restorationIdentifier="DeviceInfo" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="bOn-uR-NtJ" customClass="DeviceInfoView">
-                        <rect key="frame" x="0.0" y="8" width="50" height="90"/>
+                        <rect key="frame" x="8" y="8" width="305" height="95"/>
                         <color key="backgroundColor" red="0.25098040700000002" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                     </stackView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="bOn-uR-NtJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="8Ja-qA-riK"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="bOn-uR-NtJ" secondAttribute="trailing" constant="263" id="P1d-Id-GpU"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="bOn-uR-NtJ" secondAttribute="trailing" id="P1d-Id-GpU"/>
                     <constraint firstItem="bOn-uR-NtJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="dBM-LU-REq"/>
                 </constraints>
             </tableViewCellContentView>
