--- a/OznerLibraryDemo/WaterReplenishmentMeter_TableViewCell.xib
+++ b/OznerLibraryDemo/WaterReplenishmentMeter_TableViewCell.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -16,23 +15,12 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="TcQ-9D-Yy1">
-                        <rect key="frame" x="8" y="8" width="368" height="119"/>
+                        <rect key="frame" x="8" y="8" width="368" height="89"/>
                         <subviews>
                             <stackView tag="100" contentMode="redraw" ambiguous="YES" misplaced="YES" restorationIdentifier="DeviceInfo" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="mx3-uw-jlK" customClass="DeviceInfoView">
                                 <rect key="frame" x="0.0" y="0.0" width="188" height="89"/>
                                 <color key="backgroundColor" red="0.25098040700000002" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ccb-NK-LxU">
-                                <rect key="frame" x="0.0" y="89" width="50" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="p1j-1V-gwP"/>
-                                    <constraint firstAttribute="height" constant="30" id="ut2-7s-O1J"/>
-                                </constraints>
-                                <state key="normal" title="测试"/>
-                                <connections>
-                                    <action selector="TestClick:" destination="KGk-i7-Jjw" eventType="touchDown" id="JNF-Ua-eJb"/>
-                                </connections>
-                            </button>
                         </subviews>
                     </stackView>
                 </subviews>
